--- a/index.html
+++ b/index.html
@@ -16,6 +16,30 @@
     <script src="https://unpkg.com/scrollreveal"></script>
   </head>
   <body>
+    <header class="main-header">
+      <div class="container">
+        <div class="logo">
+          <a href="#">
+            <img src="assets/care-2.jpg" alt="شعار موقعك الطبي" />
+          </a>
+        </div>
+        <nav class="main-nav">
+          <ul>
+            <li><a href="#services">خدماتنا</a></li>
+            <li><a href="#about">عن المركز</a></li>
+            <li><a href="#doctors">أطباؤنا</a></li>
+            <li><a href="#contact">تواصل معنا</a></li>
+            <li><a href="#" class="button primary-button">حجز موعد</a></li>
+          </ul>
+        </nav>
+        <div class="mobile-toggle">
+          <span></span>
+          <span></span>
+          <span></span>
+        </div>
+      </div>
+    </header>
+
     <script src="script.js"></script>
   </body>
 </html>
