feat: Structure, style, and animate the Hero Section

--- a/index.html
+++ b/index.html
@@ -40,6 +40,29 @@
       </div>
     </header>
 
+    <section class="hero redesigned-hero">
+      <div class="container">
+        <div class="hero-content" data-sr="reveal 400ms">
+          <h1 class="hero-title">رعاية صحية تواكب تطلعاتكم</h1>
+          <p class="hero-subtitle">
+            نلتزم بتقديم أفضل مستويات الرعاية الطبية باستخدام أحدث التقنيات
+            وأعلى معايير الجودة.
+          </p>
+          <div class="hero-buttons">
+            <a href="#services" class="button primary-button hero-button"
+              >اكتشف خدماتنا</a
+            >
+            <a href="#contact" class="button secondary-button hero-button"
+              >احجز استشارة</a
+            >
+          </div>
+        </div>
+        <div class="hero-image" data-sr="slide-in-left 600ms">
+          <img src="assets/care-1.jpg" alt="صورة تعبر عن الرعاية الطبية" />
+        </div>
+      </div>
+    </section>
+
     <script src="script.js"></script>
   </body>
 </html>
