feat: Structure, style, and animate the Services Section

--- a/index.html
+++ b/index.html
@@ -63,6 +63,67 @@
       </div>
     </section>
 
+    <section id="services" class="services section-padding">
+      <div class="container">
+        <h2 class="section-title" data-sr="fade-in 300ms">خدماتنا المتميزة</h2>
+        <div class="services-grid">
+          <div class="service-item" data-sr="slide-up 500ms">
+            <div class="icon-wrapper"><i class="ri-stethoscope-fill"></i></div>
+            <h3>استشارات طبية متخصصة</h3>
+            <p>
+              نقدم استشارات طبية معمقة وشاملة من قبل نخبة من الأطباء
+              والاستشاريين.
+            </p>
+            <a href="#" class="read-more"
+              >اقرأ المزيد <i class="ri-arrow-left-s-line"></i
+            ></a>
+          </div>
+          <div class="service-item" data-sr="slide-up 700ms">
+            <div class="icon-wrapper"><i class="ri-flask-fill"></i></div>
+            <h3>فحوصات وتحاليل متقدمة</h3>
+            <p>نمتلك أحدث الأجهزة والمختبرات لإجراء فحوصات دقيقة وشاملة.</p>
+            <a href="#" class="read-more"
+              >اقرأ المزيد <i class="ri-arrow-left-s-line"></i
+            ></a>
+          </div>
+          <div class="service-item" data-sr="slide-up 900ms">
+            <div class="icon-wrapper"><i class="ri-hospital-fill"></i></div>
+            <h3>علاجات متكاملة وفعالة</h3>
+            <p>نتبع أحدث البروتوكولات العلاجية لضمان أفضل النتائج لمرضانا.</p>
+            <a href="#" class="read-more"
+              >اقرأ المزيد <i class="ri-arrow-left-s-line"></i
+            ></a>
+          </div>
+          <div class="service-item" data-sr="slide-up 600ms">
+            <div class="icon-wrapper"><i class="ri-heart-pulse-fill"></i></div>
+            <h3>رعاية قلبية متخصصة</h3>
+            <p>
+              برامج متخصصة للعناية بصحة القلب والأوعية الدموية بإشراف خبراء.
+            </p>
+            <a href="#" class="read-more"
+              >اقرأ المزيد <i class="ri-arrow-left-s-line"></i
+            ></a>
+          </div>
+          <div class="service-item" data-sr="slide-up 800ms">
+            <div class="icon-wrapper"><i class="ri-wheelchair-fill"></i></div>
+            <h3>تأهيل وعلاج طبيعي</h3>
+            <p>برامج تأهيلية مخصصة لمساعدتك على استعادة وظائفك الحركية.</p>
+            <a href="#" class="read-more"
+              >اقرأ المزيد <i class="ri-arrow-left-s-line"></i
+            ></a>
+          </div>
+          <div class="service-item" data-sr="slide-up 1000ms">
+            <div class="icon-wrapper"><i class="ri-empathize-fill"></i></div>
+            <h3>طب الأطفال والرعاية الصحية</h3>
+            <p>رعاية صحية شاملة ومتخصصة للأطفال وحديثي الولادة.</p>
+            <a href="#" class="read-more"
+              >اقرأ المزيد <i class="ri-arrow-left-s-line"></i
+            ></a>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <script src="script.js"></script>
   </body>
 </html>
