feat: Structure, style, and animate the About Section

--- a/index.html
+++ b/index.html
@@ -124,6 +124,45 @@
       </div>
     </section>
 
+    <section id="about" class="about section-padding bg-light">
+      <div class="container">
+        <div class="about-image" data-sr="zoom-in 500ms">
+          <img src="assets/about.jpg" alt="صورة عن المركز الطبي" />
+        </div>
+        <div class="about-content" data-sr="slide-in-right 700ms">
+          <h2 class="section-title">رؤيتنا وقيمنا</h2>
+          <p>
+            نطمح في مركزنا الطبي إلى أن نكون الخيار الأول للرعاية الصحية
+            الموثوقة والمبتكرة في مجتمعنا. نسعى جاهدين لتوفير بيئة علاجية مريحة
+            وآمنة، ترتكز على أحدث المعارف الطبية وأفضل الممارسات.
+          </p>
+          <p>قيمنا الأساسية تتضمن:</p>
+          <ul class="about-values">
+            <li data-sr="fade-in 800ms">
+              <i class="ri-heart-fill"></i> **الرعاية الرحيمة:** وضع صحة وراحة
+              المريض في صميم اهتماماتنا.
+            </li>
+            <li data-sr="fade-in 900ms">
+              <i class="ri-stethoscope-fill"></i> **الاحترافية والجودة:**
+              الالتزام بأعلى معايير الجودة في جميع خدماتنا.
+            </li>
+            <li data-sr="fade-in 1000ms">
+              <i class="ri-lightbulb-fill"></i> **الابتكار والتطوير:** تبني أحدث
+              التقنيات والحلول الطبية المتقدمة.
+            </li>
+            <li data-sr="fade-in 1100ms">
+              <i class="ri-group-fill"></i> **العمل الجماعي:** التعاون والتكامل
+              بين فريقنا الطبي والإداري لتقديم أفضل رعاية.
+            </li>
+            <li data-sr="fade-in 1200ms">
+              <i class="ri-user-smile-fill"></i> **الثقة والشفافية:** بناء علاقة
+              قوية وموثوقة مع مرضانا من خلال التواصل الواضح.
+            </li>
+          </ul>
+          <a href="#" class="button secondary-button">اكتشف المزيد</a>
+        </div>
+      </div>
+    </section>
     <script src="script.js"></script>
   </body>
 </html>
