feat: Structure, style, and animate the Doctors Section

--- a/index.html
+++ b/index.html
@@ -163,6 +163,68 @@
         </div>
       </div>
     </section>
+
+    <section id="doctors" class="doctors section-padding">
+      <div class="container">
+        <h2 class="section-title" data-sr="fade-in 300ms">
+          فريقنا الطبي المتخصص
+        </h2>
+        <div class="doctors-grid">
+          <div class="doctor-card" data-sr="slide-up 500ms">
+            <img src="assets/doctor-1 .jpg" alt="اسم الطبيب" />
+            <h3>د. [فوزي البنا]</h3>
+            <p>استشاري [عمود فقري]</p>
+            <div class="doctor-social">
+              <a href="#" class="social-icon" title="فيسبوك"
+                ><i class="ri-facebook-fill"></i
+              ></a>
+              <a href="#" class="social-icon" title="تويتر"
+                ><i class="ri-twitter-fill"></i
+              ></a>
+              <a href="#" class="social-icon" title="لينكدإن"
+                ><i class="ri-linkedin-fill"></i
+              ></a>
+            </div>
+          </div>
+          <div class="doctor-card" data-sr="slide-up 700ms">
+            <img src="assets/doctor-2.jpg" alt="اسم الطبيب" />
+            <h3>د. [محمد عمر]</h3>
+            <p>أخصائي [بطنة]</p>
+            <div class="doctor-social">
+              <a href="#" class="social-icon" title="فيسبوك"
+                ><i class="ri-facebook-fill"></i
+              ></a>
+              <a href="#" class="social-icon" title="تويتر"
+                ><i class="ri-twitter-fill"></i
+              ></a>
+              <a href="#" class="social-icon" title="لينكدإن"
+                ><i class="ri-linkedin-fill"></i
+              ></a>
+            </div>
+          </div>
+          <div class="doctor-card" data-sr="slide-up 900ms">
+            <img src="assets/doctor-3.jpg" alt="اسم الطبيب" />
+            <h3>د. [فتحي عبدالوهاب]</h3>
+            <p>طبيب عام</p>
+            <div class="doctor-social">
+              <a href="#" class="social-icon" title="فيسبوك"
+                ><i class="ri-facebook-fill"></i
+              ></a>
+              <a href="#" class="social-icon" title="تويتر"
+                ><i class="ri-twitter-fill"></i
+              ></a>
+              <a href="#" class="social-icon" title="لينكدإن"
+                ><i class="ri-linkedin-fill"></i
+              ></a>
+            </div>
+          </div>
+        </div>
+        <div class="doctors-cta" data-sr="zoom-in 800ms">
+          <p>نخبة من الأطباء المتخصصين في خدمتكم.</p>
+          <a href="#" class="button primary-button">عرض جميع الأطباء</a>
+        </div>
+      </div>
+    </section>
     <script src="script.js"></script>
   </body>
 </html>
