feat: Structure, style, and animate the Contact Section

--- a/index.html
+++ b/index.html
@@ -225,6 +225,107 @@
         </div>
       </div>
     </section>
+
+    <section id="contact" class="contact redesigned-contact section-padding">
+      <div class="container">
+        <h2 class="section-title" data-sr="fade-in 300ms">تواصلوا معنا</h2>
+        <div class="contact-grid">
+          <div class="contact-details" data-sr="slide-in-left 600ms">
+            <div class="contact-info-item">
+              <i class="ri-map-pin-fill"></i>
+              <h3>موقعنا</h3>
+              <p>[21 شارع محمد قدرى ـ السيدة زينب]</p>
+            </div>
+            <div class="contact-info-item">
+              <i class="ri-phone-fill"></i>
+              <h3>اتصل بنا</h3>
+              <p><a href="tel:+[رقم الهاتف]">[0100204003]</a></p>
+            </div>
+            <div class="contact-info-item">
+              <i class="ri-mail-fill"></i>
+              <h3>البريد الإلكتروني</h3>
+              <p>
+                <a href="mailto:[البريد الإلكتروني للمركز]"
+                  >[baryedElqtroony.com]</a
+                >
+              </p>
+            </div>
+            <div class="social-links">
+              <h3>تابعونا على</h3>
+              <div class="social-icons">
+                <a href="#" title="فيسبوك"><i class="ri-facebook-fill"></i></a>
+                <a href="#" title="تويتر"><i class="ri-twitter-fill"></i></a>
+                <a href="#" title="انستجرام"
+                  ><i class="ri-instagram-fill"></i
+                ></a>
+                <a href="#" title="لينكدإن"><i class="ri-linkedin-fill"></i></a>
+              </div>
+            </div>
+          </div>
+          <div class="contact-form-wrapper" data-sr="slide-in-right 800ms">
+            <h3>نحن هنا لخدمتكم</h3>
+            <form action="#" method="post" class="contact-form">
+              <div class="form-group">
+                <input
+                  type="text"
+                  id="name"
+                  name="name"
+                  class="form-control"
+                  placeholder="اسمكم الكريم"
+                  required
+                />
+              </div>
+              <div class="form-group">
+                <input
+                  type="email"
+                  id="email"
+                  name="email"
+                  class="form-control"
+                  placeholder="بريدكم الإلكتروني"
+                  required
+                />
+              </div>
+              <div class="form-group">
+                <input
+                  type="tel"
+                  id="phone"
+                  name="phone"
+                  class="form-control"
+                  placeholder="رقم هاتفكم"
+                />
+              </div>
+              <div class="form-group">
+                <select id="service" name="service" class="form-control">
+                  <option value="">اختر الخدمة المطلوبة</option>
+                  <option value="consultation">استشارة طبية</option>
+                  <option value="checkup">فحص شامل</option>
+                  <option value="treatment">خدمة علاجية</option>
+                  <option value="laboratory">تحاليل مخبرية</option>
+                  <option value="physiotherapy">علاج طبيعي</option>
+                  <option value="pediatrics">طب الأطفال</option>
+                </select>
+              </div>
+              <div class="form-group full-width">
+                <textarea
+                  id="message"
+                  name="message"
+                  rows="5"
+                  class="form-control"
+                  placeholder="رسالتكم أو استفساركم"
+                  required
+                ></textarea>
+              </div>
+              <button
+                type="submit"
+                class="button primary-button contact-submit-button"
+              >
+                إرسال رسالتكم
+              </button>
+            </form>
+          </div>
+        </div>
+      </div>
+    </section>
     <script src="script.js"></script>
   </body>
 </html>
