--- a/index.html
+++ b/index.html
@@ -326,6 +326,24 @@
         </div>
       </div>
     </section>
+
+    <footer class="footer">
+      <div class="container">
+        <div class="footer-content">
+          <div class="footer-logo">
+            <img src="assets/care-2.jpg" alt="شعار موقعك الطبي" />
+          </div>
+          <div class="footer-links">
+            <ul>
+              <li><a href="#">سياسة الخصوصية</a></li>
+              <li><a href="#">شروط الاستخدام</a></li>
+              <li><a href="#">خريطة الموقع</a></li>
+            </ul>
+          </div>
+          <p>&copy; 2025 جميع الحقوق محفوظة لـ <a href="#">عافيتي</a></p>
+        </div>
+      </div>
+    </footer>
     <script src="script.js"></script>
   </body>
 </html>
